--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,13 @@
   flex-direction: column;
 }
 
+.textAreas {
+  position: relative;
+  margin: 5%;
+  width: 90%;
+  height: 200px;
+}
+
 textarea {
   position: absolute;
   top: 0px;
@@ -60,7 +67,7 @@ textarea {
   position: relative;
   margin: 5%;
   width: 90%;
-  min-height: 400px;
+  height: 100px;
 }
 
 .inputs {
@@ -74,7 +81,41 @@ textarea {
   margin: 5px;
   font-size: 40px;
   border-radius: 4px;
+}
 
+.typeInputs {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: .5;
+  background: transparent;
+  border: 1px solid #ccc;
+  padding: 5px;
+  margin: 5px;
+  font-size: 40px;
+  border-radius: 4px;
+
+}
+
+.typeInputs.userTextInput {
+  color: skyblue;
+  opacity: 1;
+  z-index: 1;
+  width: 100%;
+}
+
+.textInputs {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: .5;
+  background: transparent;
+  border: 1px solid #ccc;
+  padding: 5px;
+  margin: 5px;
+  font-size: 40px;
+  border-radius: 4px;
+  width: 100%
 }
 
 .topP {
