--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
-.App {
+.main-container {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,10 +8,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .mainTextAreas {
@@ -60,14 +42,6 @@ textarea {
   border-radius: 4px;
 }
 
-.paragraphs {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  opacity: .5;
-  background: transparent;
-}
-
 .inputsArea {
   position: relative;
   margin: 0 5% 5%;
@@ -99,7 +73,6 @@ textarea {
   margin: 5px;
   font-size: 40px;
   border-radius: 4px;
-
 }
 
 .typeInputs.userTextInput {
@@ -133,11 +106,23 @@ textarea {
   color: darksalmon;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+} */
+
+/* .App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+} */
+
