--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,8 @@ textarea {
   margin: 5px;
   font-size: 40px;
   border-radius: 4px;
-  width: 100%
+  width: 100%;
+  height: 400px;
 }
 
 .topP {
