--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0px 0 0 0;
+}
+
+.sub-header.main-header {
+  margin: 50px 0 0 0;
 }
 
 .mainTextAreas {
@@ -21,7 +25,7 @@
   position: relative;
   margin: 0 5% 5%;
   width: 90%;
-  height: 200px;
+  height: 330px;
 }
 
 .sub-header {
@@ -95,6 +99,7 @@ textarea {
   border-radius: 4px;
   width: 100%;
   height: 400px;
+  min-width: 800px;
 }
 
 .topP {
@@ -105,6 +110,10 @@ textarea {
 
 .bottomP {
   color: darksalmon;
+}
+
+.congratz {
+  margin: 450px 0 0 0;
 }
 
 /* @keyframes App-logo-spin {
